[package]
name = "soundfont-deluge"
version = "0.1.0"
authors = ["Pär Bohrarper <par.bohrarper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "1.1.1"
riff = "1.0.1"
log = "0.4.11"
env_logger = "0.8.1"
wav = "0.4.1"
xmlwriter = "0.1.0"