[package]
name = "soundfont-deluge"
version = "0.1.0"
authors = ["Pär Bohrarper <par.bohrarper@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
binread = "1.1.1"
riff = "1.0.1"
log = "0.4.11"
env_logger = "0.8.1"
wav = "0.4.1"
xmlwriter = "0.1.0"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
deluge_macros = { path = "deluge_macros" }