[package]
name = "soundfont-deluge"
version = "0.1.0"
authors = ["Pär Bohrarper <par.bohrarper@gmail.com>"]
edition = "2018"

[workspace]

[dependencies]
binread = "1.1.1"
riff = "1.0.1"
log = "0.4.11"
env_logger = "0.8.1"
wav = "1.0.0"
clap = "2.33.3"
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
xml-rs = "0.8.3"
derive_builder = "0.10.2"
lazy_static = "1.4.0"